--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,5 +17,11 @@
     
     
     <%= yield %>
+    
+    <script>
+      $(function(){
+        $(".alert").fadeOut(5000):
+      });
+    </script>
   </body>
 </html>
