--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,9 +10,48 @@
   </head>
 
   <body>
-    <% flash. each do |key, value| %>
-     <div class= "alert alert-<%= key %>" role="alert"><%= value %></div>
+    <% flash.each do |key, value| %>
+     <div class="alert alert-<%= key %>" role="alert"><%= value %></div>
     <% end %>
+    
+    <nav class ="navbar navbar-default navbar-fixed-top navbar-transparent">
+      <div class="container">
+        <%= link_to root_path do %>
+         <span><%= image_tag "icons/logo.png", class: "navbar-brand" %></span>
+        <% end %>
+        <ul class="nav navbar-nav navbar-right">
+          <% if logged_in? %>
+          <il>
+            <%= link_to "#" do %>
+            <%= image_tag "icons/heart.png" %>
+            <% end %>
+          </il>
+          <il>
+            <%= link_to new_topic_path do %>
+            <%= image_tag "icons/camera.png" %>
+             <% end %>
+             
+          </il>
+          <il>
+            <%= link_to logout_path, method: :delete do %>
+             <% end %>
+          </il>
+          <% else %>
+          <il>
+            <%= link_to new_user_path do %>
+            <%= image_tag "icons/register.png" %>
+            <% end %>
+          </il>
+          <il>
+            <%= link_to login_path do %>
+           <%= image_tag "icons/login.png" %>
+           <% end %>
+          </il>
+    
+          <% end %>
+        </ul>
+      </div>
+    </nav>
     
     
     
