--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,8 +22,8 @@
         <ul class="nav navbar-nav navbar-right">
           <% if logged_in? %>
           <il>
-            <%= link_to "favorites_index" do %>
-            <%= image_tag "icons/heart.png" %>
+            <%= link_to favorites_index_path do %>
+              <%= image_tag "icons/heart.png" %>
             <% end %>
           </il>
           <il>
