--- a/app/views/contents/new.html.erb
+++ b/app/views/contents/new.html.erb
@@ -3,11 +3,11 @@
     <div class="row">
       <div class="col-md-6 col-md-offset-3">
         <h1 class="text-center">Add Comment</h1>
-        <%= form_for @topic do |f| %>
+        <%= form_for @content do |f| %>
 
           <div class="form-group">
-            <%= f.label :description %>
-            <%= f.text_area :description, class: 'form-control' %>
+            <%= f.label :comment %>
+            <%= f.text_area :comment, class: 'form-control' %>
           </div>
 
           <%= f.submit '投稿', class: 'btn btn-black btn-block' %>
