コメント表示機能

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -63,5 +63,7 @@
         $(".alert").fadeOut(5000):
       });
     </script>
+    <%= debug(params) if Rails.env.deveropment? %>
+    <%= debug @contents if Rails.env.deveropment? %>
   </body>
 </html>
