--- a/app/views/contents/new.html.erb
+++ b/app/views/contents/new.html.erb
@@ -3,8 +3,21 @@
     <div class="row">
       <div class="col-md-6 col-md-offset-3">
         <h1 class="text-center">Add Comment</h1>
+         <% if @content.errors.any? %>
+            <div id="error_explanation">
+              <h2><%= @content.errors.count %>件のエラーがあります。</h2>
+           
+              <ul>
+              <% @content.errors.full_messages.each do |msg| %>
+                <li><%= msg %></li>
+              <% end %>
+              </ul>
+            </div>
+          <% end %>
         <%= form_for @content do |f| %>
-
+          <%= f.hidden_field :user_id, value: @content.user_id %>
+          <%= f.hidden_field :topic_id, value: @content.topic_id %>
+          
           <div class="form-group">
             <%= f.label :comment %>
             <%= f.text_area :comment, class: 'form-control' %>
@@ -17,6 +30,7 @@
     </div>
   </div>
 </div>
+ 
  
  
  
