デプロイの準備

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -60,7 +60,7 @@
     
     <script>
       $(function(){
-        $(".alert").fadeOut(5000):
+        $(".alert").fadeOut(5000);
       });
     </script>
     <%= debug(params) if Rails.env.deveropment? %>
