--- a/app/views/topics/index.html.erb
+++ b/app/views/topics/index.html.erb
@@ -8,14 +8,24 @@
               <%= topic.user.name %>
             </h2>
             <%= image_tag topic.image.url %>
+            <%# 「!」はそれ以下の否定。つまり topicカラムのfavorite_usersカラムの中に現在ログインしているユーザがいなればpostでfavorite_pathにおくる
+            もしいなければdeleteでfavorite_pathにおくる%>
             <% if !topic.favorite_users.include?(current_user) %>
-              <%= link_to favorites_path(topic_id: topic.id), method: :post do %>
+             <%= link_to favorites_path(topic_id: topic.id), method: :post do %>
+                <%= image_tag 'icons/heart-black.png', class: 'topic-index-icon' %>
+              <% end %>
+            <% else %>
+              <%= link_to favorites_path(topic_id: topic.id), method: :delete do %>
                 <%= image_tag 'icons/heart-black.png', class: 'topic-index-icon' %>
               <% end %>
             <% end %>
+            <%# いいねの数を表示する %>
+            <%= topic.favorite_users.count %>
+            
             <%= link_to contents_new_path(topic_id: topic.id) do %>
               <%= image_tag 'icons/comment.png', class: 'topic-index-icon' %>
             <% end %>
+            
             <p class="topic-text">
               <%= topic.description %>
             </p>
