--- a/app/views/topics/new.html.erb
+++ b/app/views/topics/new.html.erb
@@ -14,8 +14,9 @@
             <%= f.text_area :description, class: 'form-control' %>
           
           </div>
-        
+          <% if !current_user.nil? %>
           <%= f.submit '投稿', class: 'btn btn-block btn-block' %>
+          <% end %>
         <% end %>
         
       </div>
